# zeekr_ev_api

./: .gitignore  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: publish.yml  test.yml
src/zeekr_ev_api/: __init__.py  client.py  const.py  exceptions.py  login.py  network.py  status.py  zeekr_app_sig.py  zeekr_hmac.py
tests/: test_client.py  test_concurrency.py  test_zeekr_app_sig.py  test_zeekr_hmac.py
